--- a/mantenimientos/Historial_infraestructura/estilos.css
+++ b/mantenimientos/Historial_infraestructura/estilos.css
@@ -13,7 +13,7 @@
 
 #banner {
     background-color: rgb(0, 59, 92);
-    height          : 15%;
+    height          : 10%;
     width           : 100%;
     position        : static;
     box-shadow      : 5px 5px 20px rgba(53, 71, 82, 0.381);
@@ -22,10 +22,8 @@
 
 .banner2{
     display         : flex;
-    position        : static;
     max-width       : 100%;
-    height          : 60px;
-    z-index         : 2;
+    height          : 6%;
     background-color: #616161 !important;
     justify-content : right;
     align-items     : center;
@@ -52,12 +50,17 @@
     background-color: rgb(68, 160, 221);
     color           : rgb(255, 255, 255);
     line-height     : 20px;
-    width           : 200px;   
-    margin          : 20px;
-    margin-bottom   : 2px;
+    width           : 200px;  
+    margin          : 10px;
     font-size       : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
+    position        : flex;
 }
 
+.finalizar{
+    width: 100%;
+    margin-top: 15px;
+    text-align: center !important;
+}
 
 #botones-lat{
     border-radius: 5px;
@@ -67,13 +70,17 @@
 }
 
 body {
-    display         : flex;
-    flex-direction  : column;
+    display         : block;
+    height          : 100%;
+    width           : 100%;
     background-color: #E6E6E6;
+
 }
 .content {
     flex   : 1 0 auto;
-    z-index: 3;
+    z-index: 2;
+    width: 100%;
+    height: 84.78%;
 }
 
 /* CODIGO PERTENECIENTE A LAS TABLA QUE MUESTRA EL HISTORIAL */
@@ -143,6 +150,7 @@ th{
 }
 
 
+
 .planeado{
     --bs-table-bg: #FFF3CD !important;
 }
@@ -163,14 +171,21 @@ th{
     color           : rgb(255, 255, 255);
     line-height     : 20px                ; 
     margin          : 20px                ;
-    margin-bottom   : 2px                 ;
+    margin-bottom   : 20px !important     ;
     font-size       : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
     display         : none;
 
 }
 /*---------------------------------------------------------------*/
 
-
+.footer{
+    position        : absolute;
+    width: 100%;
+    margin-top      : 10px;
+    color           : #F2F2F2 !important;
+    background-color: #242424 !important;
+    font            : 14px Karla, Sans-Serif;
+}
 
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
 @media (max-width: 1709px) {
@@ -356,7 +371,7 @@ th{
     .formuno{
         font-size       : 11.45px;
         width           : 99%;
-        height          : 70%;
+        height          : 20%;
         display         : table;
         text-align      : center;
 
