--- a/mantenimientos/Calendario/estilos.css
+++ b/mantenimientos/Calendario/estilos.css
@@ -1,5 +1,3 @@
-
-
 .txt-title{
     text-align    : center;
     padding       : 1.75em 0;
@@ -11,10 +9,32 @@
     font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);  
 }
 
+body {
+    min-width            : 100%;
+    min-height           : 100%;
+    display              : flex;
+    flex-direction       : column;
+    background-color     : #E6E6E6;
+}
+
+.content {
+    flex   : 1 0 auto;
+    z-index: 3;
+    width  : 100%;
+    min-height : 69%;
+}
+
+footer{
+    width           : 100%;
+    height          : 8%;
+    color           : #F2F2F2 !important;
+    background-color: #242424 !important;
+    font            : 14px Karla, Sans-Serif;
+}
 
 #banner {
     background-color: rgb(0, 59, 92);
-    height          : 100%;
+    height          : 15%;
     width           : 100%;
     position        : static;
     box-shadow      : 5px 5px 20px rgba(53, 71, 82, 0.381);
@@ -22,14 +42,14 @@
 }
 
 .banner2{
-    display: flex;
-    position: static;
-    max-width: 100%;
-    height: 60px;
-    z-index: 2;
+    display         : flex;
+    position        : static;
+    max-width       : 100%;
+    height          : 8%;
+    z-index         : 2;
     background-color: #616161 !important;
-    justify-content: right;
-    align-items: center;
+    justify-content : right;
+    align-items     : center;
     
 }
 
@@ -96,31 +116,6 @@ th{
 }
 /*---------------------------------------------------------------*/
 
-body {
-    width                : 100%;
-    height               : 100%;
-    display              : grid;
-    grid-template-columns: 100%;
-    grid-template-rows   : 10% 8% 0% 72% 10%     0% 0% 0% 0%;
-    background-color: #E6E6E6;
-}
-.content {
-    flex: 1 0 auto;
-    z-index: 3;
-    width: 100%;
-    height: 75%;
-}
-
-footer{
-    position        : absolute;
-    width           : 100%;
-    height: 8%;
-    margin-top      : 10px;
-    bottom          : 0;
-    color           : #F2F2F2 !important;
-    background-color: #242424 !important;
-    font            : 14px Karla, Sans-Serif;
-}
 
 
 
@@ -128,7 +123,7 @@ footer{
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
 @media (max-width: 1650px) {
 
-    #lns-logo{
+    .lns-logo{
         width :140px;
         height: 60;
     }
@@ -193,14 +188,38 @@ footer{
         height        : 65px;
         vertical-align: middle;
     }
+
+    html, body {
+        height: 100% !important;
+    }
     
 
     /******************************************************/
 }
 
+
+@media (max-height: 945px) {
+
+    .lns-logo{
+        width :140px;
+        height: 60;
+    }
+
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+
+    html, body {
+        height: 100% !important;
+    }
+    
+     
+}
+
 @media (max-width: 959px) {
 
-    #lns-logo{
+    .lns-logo{
         width :140px;
         height: 60;
     }
@@ -267,9 +286,12 @@ footer{
 
 
     html, body {
-        height: 110% !important;
+        height: 100% !important;
     }
     
+    footer{
+        height: 15%;
+    }
 }
 
 @media (max-width: 450px) {
@@ -278,9 +300,45 @@ footer{
     }
 
     html, body {
-        height: 120% !important;
+        height: 100% !important;
     }
+
+    #banner{
+        height: 10%;
+    }
+
+    #tablados{
+        width: 70%;
+        font-size: 10.2px;
+    }
+
+
+
+    footer{
+        height: 6.5%;
+    }
+}
+
+@media (max-width: 413px){
     
+    .lns-logo{
+        width   : 90px;
+        height  : 10px;
+        position:absolute;
+        left    : 1%;
+        top     : 3.5%;
+    }
+
+    #banner{
+        height: 20%;
+    }
+
+    body{
+        background-color: aqua;
+    }
+    footer{
+        height: 8%;
+    }
 }
 
 @media (max-width: 170px) {
@@ -291,24 +349,11 @@ footer{
     html, body {
         height: 130% !important;
     }
+
+    footer{
+        height: 25%;
+    }
     
 }
 
-@media (max-height: 945px) {
 
-    #lns-logo{
-        width :140px;
-        height: 60;
-    }
-
-    .container, .container-sm {
-    max-width: none !important; 
-    }
-
-
-    html, body {
-        height: 100% !important;
-    }
-    
-     
-}
