--- a/mantenimientos/Calendario/estilos.css
+++ b/mantenimientos/Calendario/estilos.css
@@ -18,29 +18,31 @@ body {
 }
 
 .content {
-    flex   : 1 0 auto;
-    z-index: 3;
-    width  : 100%;
+    flex       : 1 0 auto;
+    z-index    : 3;
+    width      : 100%;
     min-height : 69%;
 }
 
 footer{
     width           : 100%;
-    height          : 8%;
+    height          : 5.5%;
     color           : #F2F2F2 !important;
     background-color: #242424 !important;
     font            : 14px Karla, Sans-Serif;
 }
 
+/*ESTILOS DEL BANNER PRINCIPAL*/
 #banner {
     background-color: rgb(0, 59, 92);
-    height          : 15%;
+    height          : 12%;
     width           : 100%;
     position        : static;
     box-shadow      : 5px 5px 20px rgba(53, 71, 82, 0.381);
     z-index         : 1;
 }
 
+/*ESTILOS DEL BANNER SECUNDARIO*/
 .banner2{
     display         : flex;
     position        : static;
@@ -53,27 +55,27 @@ footer{
     
 }
 
+/*ESTILOS DEL LOGO DE MINERVA*/
 .minerva{
     width   : 80px;
     height  : 80px;
-    position:absolute;
-    right   : 1%;
-    top     : 3%;
+
 }
 
+
+/*ESTILOS DEL LOGO DEL LNS*/
 .lns-logo{
     width   : 170px;
     height  : 60px;
-    position:absolute;
-    left    : 1%;
-    top     : 3.5%;
 }
 
+
+/*ESTILOS PARA QUE EL BOTON DE "REGRESAR" RESALTE*/
 #botones-lat{
     border-radius: 5px;
-    margin: 0.7em;
-    border:2px solid white;
-    font-size: 16px; 
+    margin       : 0.7em;
+    border       : 2px solid white;
+    font-size    : 16px; 
 }
 
 /*ESTO ES PARA QUE SE SEPARE EN DOS LA TABLA ALINEADA*/
@@ -81,7 +83,7 @@ footer{
     display              : grid;
     grid-template-columns: 50% 50%;
     grid-template-rows   : 100%;
-    font-size: 15px;
+    font-size            : 15px;
 }
 
 /*PARA QUE LAS CELDAS SEAN DEL MISMO TAMAÑO*/
@@ -116,11 +118,39 @@ th{
 }
 /*---------------------------------------------------------------*/
 
+/*PERTENECIENCTE AL CONTENEDOR DE LA OPCION DE SELECCIONAR AÑO*/
+.menu-anio{
+    padding        : 3px;
+    width          : 100%;
+    height         : 130px;
+    display        : flex;
+    justify-content: center;
+    border-left    : 5px;
+}
+/*------------------------------------------------------------*/
 
+/*PERTENECIENTE A LA OPCION DE SELECCIONAR AÑO*/
+
+.seleccionar-anio{
+    background-color: rgb(204, 204, 204);
+    width           : 200px;
+    height          : 100%;
+    border-radius   : 10px;
+    margin-bottom   : 20px;
+    padding         : 10px;
+    text-align      : center;
+    position        : static;
+    display         : block;
+}
+
+/*--------------------------------------------*/
 
 
 
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
+
+
+/*PRIMER CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
 @media (max-width: 1650px) {
 
     .lns-logo{
@@ -129,7 +159,7 @@ th{
     }
 
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none !important; 
     }
 
 
@@ -156,6 +186,7 @@ th{
      
 }
 
+/*SEGUNDO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
 @media (min-width: 966px) {
     /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO
     CUANDO LA PANTALLA CREZCA*/
@@ -197,7 +228,7 @@ th{
     /******************************************************/
 }
 
-
+/*TERCER CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
 @media (max-height: 945px) {
 
     .lns-logo{
@@ -217,6 +248,7 @@ th{
      
 }
 
+/*CUARTO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
 @media (max-width: 959px) {
 
     .lns-logo{
@@ -271,17 +303,17 @@ th{
         display              : grid;
         grid-template-columns: 100%;
         grid-template-rows   : 100%;
-        font-size: 11.50px;
+        font-size            : 11.50px;
     }
     
      
 }
 
 
-
+/*QUINTO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
 @media (max-width: 730px) {
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none !important; 
     }
 
 
@@ -294,9 +326,10 @@ th{
     }
 }
 
+/*SEXTO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
 @media (max-width: 450px) {
     .container, .container-sm {
-    max-width: none !important; 
+        max-width: none !important; 
     }
 
     html, body {
@@ -304,12 +337,12 @@ th{
     }
 
     #banner{
-        height: 10%;
+        height: 12%;
     }
 
     #tablados{
-        width: 70%;
-        font-size: 10.2px;
+        width    : 70%;
+        font-size: 9.5px;
     }
 
 
@@ -319,31 +352,53 @@ th{
     }
 }
 
+/*SEPTIMO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
 @media (max-width: 413px){
     
     .lns-logo{
         width   : 90px;
         height  : 10px;
-        position:absolute;
+        position: absolute;
         left    : 1%;
         top     : 3.5%;
     }
 
     #banner{
-        height: 20%;
+        height: 10%;
     }
 
-    body{
-        background-color: aqua;
+    .minerva{
+        width : 60px !important;
+        height: 60px !important;
     }
+
+    .lns-logo{
+        width   : 150px;
+        height  : 40px;
+    }
+
     footer{
         height: 8%;
     }
 }
 
-@media (max-width: 170px) {
+/*OCTAVO CAMBIO CUANDO LA PANTALLA SE HACE PEQUEÑA*/
+@media (max-width: 220px) {
     .container, .container-sm {
     max-width: none !important; 
+    }
+
+    .minerva{
+        display: none !important;
+    }
+
+    #banner{
+        height: 7%;
+    }
+
+    .lns-logo{
+        width   : 150px;
+        height  : 40px;
     }
 
     html, body {
@@ -351,9 +406,7 @@ th{
     }
 
     footer{
-        height: 25%;
+        height: 11%;
     }
     
 }
-
-
