--- a/css_estilos/menu_inicial.css
+++ b/css_estilos/menu_inicial.css
@@ -1,29 +1,28 @@
-
-
-.txt-title{
-    text-align    : center;
-    padding       : 1.75em 0;
-    letter-spacing: 0.075rem;
-    line-height   : 1.25;
-    color         : rgb(0, 59, 92);
-    font-family   : "Roboto Condensed", sans-serif;
-    font-weight   : 600;
-    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);  
+body {
+    min-width       : 100%;
+    min-height      : 100%;
+    display         : flex;
+    flex-direction  : column;
+    background-color: #E6E6E6;
 }
 
-
-.sub-title{
-    text-align    : center;
-    padding       : 0.75em 0;
-    letter-spacing: 0.075rem;
-    line-height   : 1.25;
-    color         : #616161;
-    font-family   : "Roboto ligth", sans-serif;
-    font-weight   : 600;
-    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
-    
+.content {
+    flex: 1 0 auto;
+    z-index: 3;
+    width  : 100%;
+    min-height : 69%;
 }
 
+footer {
+    width           : 100%;
+    height          : 6%;
+    color           : #F2F2F2 !important;
+    background-color: #242424;
+    font            : 14px Karla, Sans-Serif;
+
+}
+
+/*PERTENECIENTE AL BANNER PRINCIPAL*/
 #banner {
     background-color: rgb(0, 59, 92);
     height          : 15%;
@@ -33,6 +32,7 @@
     z-index         : 1;
 }
 
+/*PERTENECIENTE AL BANNER DONDE SE ENCUENTRA EL BOTON DE CERRAR SESION*/
 .banner2{
     display: flex;
     position: static;
@@ -45,6 +45,32 @@
     
 }
 
+/*ESTILOS DEL TITULO PRINCIPAL, SIEMPRE AL INICIO DE PAGINA*/
+.txt-title{
+    text-align    : center;
+    padding       : 1.75em 0;
+    letter-spacing: 0.075rem;
+    line-height   : 1.25;
+    color         : rgb(0, 59, 92);
+    font-family   : "Roboto Condensed", sans-serif;
+    font-weight   : 600;
+    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.7rem);  
+}
+
+/*ESTILOS DE TITULOS SECUNDARIOS*/
+.sub-title{
+    text-align    : center;
+    padding       : 0.75em 0;
+    letter-spacing: 0.075rem;
+    line-height   : 1.25;
+    color         : #616161;
+    font-family   : "Roboto ligth", sans-serif;
+    font-weight   : 600;
+    font-size     : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
+    
+}
+
+/*ESTILOS DEL LOGO DE MINERVA*/
 .minerva{
     width   : 80px;
     height  : 80px;
@@ -53,6 +79,7 @@
     top     : 3%;
 }
 
+/*ESTILOS DEL LOGO DEL LNS*/
 .lns-logo{
     width   : 170px;
     height  : 60px;
@@ -61,59 +88,41 @@
     top     : 3.5%;
 }
 
+/*ESTILOS DE BOTONES DEL MENU, EN COLOR AZUL*/
 #botones_desp{
     background-color: rgb(68, 160, 221);
     color           : rgb(255, 255, 255);
-    margin-top      : 10px;
     line-height     : 20px;
     width           : 200px;   
-    margin-top      : 20px;
-    margin-bottom   : 20px;
-    font-size       : clamp(1rem, -0.875rem + 8.333vw, 1.1rem); ;
-}
-
-.contenedoruno{
-    
-    display        : flex;
-    flex-direction : column;
-    justify-content: center;
-    align-items    : center;
-}
-
-.contenedordos{
-    display       : flex;
-    flex-direction: column;
-    align-items   : center;
-}
-
-.grupo-boton{
-    display        : flex;
-    flex-direction : column;
-    align-items    : center;
-    justify-content: center;
+    margin          : 20px;
+    margin-bottom   : 2px;
+    font-size       : clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
 }
 
 
-
+/*ESTILOS DE LAS LINEAS QUE DIVIDEN EN SECCIONES EL MENU*/
 .hr1{
-    border-left: thick solid rgba(0, 0, 0,0.05);
-    height     : 75.1vh;
+    border-left: thick solid rgba(0, 0, 0, 0.20);;
+    border-top: none;
+    height     : 40vh;
     left       : 38%;
     width      : 0.5vh;
     position   : absolute;
-    top        : 32.3%;
-    transform  : translateY(-20%);
+    top        : 35%;
    }
 
+
 .hr2{
-    border-left: thick solid rgba(0, 0, 0, 0.05);
-    height     : 75.1vh;
+    border-left: thick solid rgba(0, 0, 0, 0.20);
+    border-top: none;
+    height     : 40vh;
     right      : 38%;
-    width      : 0.5vh;
+    width      : 0vh;
     position   : absolute;
-    top        : 32.3%;
-    transform  : translateY(-20%);
+    top        : 35%;
 }
+/*-------------------------------------------------------*/
+
 
 /*Estilos del boton de cerrar sesion */
 .cerrar-sesion {
@@ -139,30 +148,9 @@
 }
 
 
-body {
-    display         : flex;
-    flex-direction  : column;
-    background-color: #F2F2F2;
-}
-.content {
-    flex: 1 0 auto;
-    z-index: 3;
-}
-
-.footer {
-    color           : #F2F2F2 !important;
-    background-color: #242424;
-    font            : 14px Karla, Sans-Serif;
-
-}
-
-
-
-
-
-
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
-@media (max-width: 1600px) {
+
+@media (min-width: 1650px) {
 
     #lns-logo{
         width :140px;
@@ -173,28 +161,51 @@ body {
     max-width: none !important; 
     }
 
-    body{
-        background-color: #E6E6E6;
-    }
 
     html, body {
-        height: 103% !important;
+        height: 100% !important;
     }
     
      
 }
 
-@media (max-width: 580px) {
+@media (max-width: 1650px) {
+
+    #lns-logo{
+        width :140px;
+        height: 60;
+    }
+
     .container, .container-sm {
     max-width: none !important; 
     }
 
-    body{
-        background-color: rgb(60, 0, 255);
-    }
 
     html, body {
-        height: 117% !important;
+        height: 100% !important;
+    }
+    
+     
+}
+
+@media (max-width: 980px){
+    .hr1{
+        display: none !important;
+    }
+
+    .hr2{
+        display: none !important;
+    }
+}
+
+@media (max-width: 730px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+
+    html, body {
+        height: 110% !important;
     }
     
 }
@@ -204,14 +215,39 @@ body {
     max-width: none !important; 
     }
 
-    body{
-        background-color: rgb(0, 255, 76);
+    #banner{
+        height: 8.5%;
+    }
+
+    .minerva{
+        width: 70px;
+        height: 65px;
+    }
+
+    .lns-logo{
+        width: 160px;
+        height: 50px;
     }
 
     html, body {
         height: 120% !important;
     }
+
+    footer{
+        height: 7.5%;
+    }
     
+}
+
+
+@media (max-width: 260px){
+    .minerva{
+        display: none !important;
+    }
+
+    footer{
+        height: 11%;
+    }
 }
 
 @media (max-width: 170px) {
@@ -219,10 +255,20 @@ body {
     max-width: none !important; 
     }
 
-    body{
-        background-color: rgb(255, 106, 0);
+    #banner{
+        height: 6%;
     }
 
+  
+    .lns-logo{
+        width: 150px;
+        height: 40px;
+    }
+
+    footer{
+        height: 11.5%;
+    }
+    
     html, body {
         height: 130% !important;
     }
