--- a/mantenimientos/Entrada_infraestructura/estilos.css
+++ b/mantenimientos/Entrada_infraestructura/estilos.css
@@ -62,6 +62,9 @@
     position        : flex;
 }
 
+
+
+
 body {
     display         : block;
     height          : 100%;
@@ -71,51 +74,84 @@ body {
 }
 
 .content {
+    display: flex;
     flex   : 1 0 auto;
     z-index: 2;
     width  : 100%;
-    height : 100%;
+    height : 75.9%;
+    justify-items: center !important;
 }
 
            /*PERTENECIENTE A ESTILOS DEL FORMULARIO*/
 .contenedorform{
-    width: 98%;
-    height: 70% !important;
+    width: 50%;
+    height: 53% !important;
     position: absolute;
-
+    text-align: center;
+    left: 25%;
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 50% 50%;
-
-    background-color: aqua;
 }
 
+
+/*ESTILOS DE LA PRIMERA MITAD DEL FORMULARIO*/
 .formprincipal{
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    background-color: antiquewhite;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: rgb(199, 199, 199);
 }
 
-.row{
-    margin-left: 10px !important;
-}
-
-#infra_aspecto{
+/*ESTILOS DE LA SEGUNDA PARTE DEL FORMULARIO*/
+.form2{
     width: 100%;
-}
-
-#infra_desc{
-    width: 100%;
-}
-
-#infra_beneficios{
-    width: 100%;
+    height: 100%;
+    align-items: center;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: rgb(199, 199, 199);
 }
 
 
            /*-----------------------------------*/
 
+/*ESTILOS DE LOS TITULOS DE INPUT*/
+.titulo-input{
+    font-size: 13px;
+    align-content: center;
+    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+/*ESTILOS DEL CONTENEDOR DEL INPUT*/
+.contenedor-input{
+    width: 100%;
+}
+
+
+/*ESTILOS DEL INPUT*/
+.input{
+    width: 50%;
+    height: auto;
+    border-radius: 10px;
+    border: 0px;
+    text-align: center;
+    margin: 5px;
+}
+
+/*ESTILOS DE LOS TEXTAREA*/
+.input-area{
+    width: 80%;
+    height: auto;
+    border-radius: 10px;
+    border: 0px;
+    text-align: center;
+    margin: 5px;
+}
 
            /*ESTILOS DEL FOOTER*/
 .footer{
@@ -194,6 +230,8 @@ body {
   
     /*****************************************************/
 
+
+
 }
 
 
@@ -221,16 +259,67 @@ body {
 }
 
 
+@media (max-width: 880px){
+    .container, .container-sm {
+        max-width: none !important; 
+    }
 
+    html, body {
+        height: 110% !important;
+    }
+
+    #banner{
+        height: 10%;
+    }
+
+    .content{
+        height: 100%;
+    }
+
+    .contenedorform{
+        width: 50%;
+        height: 98% !important;
+        position: absolute;
+        text-align: center;
+        left: 25%;
+        display: grid;
+        grid-template-rows: 50% 50%;
+        grid-template-columns: 100%;
+    }
+
+    .formprincipal{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        border-top-left-radius: 20px !important;
+        border-bottom-left-radius: 0px !important;
+        background-color: rgb(199, 199, 199);
+    }
+    
+    /*ESTILOS DE LA SEGUNDA PARTE DEL FORMULARIO*/
+    .form2{
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 20px;
+        background-color: rgb(199, 199, 199);
+    }
+  
+}
 
 @media (max-width: 731px) {
     .container, .container-sm {
         max-width: none !important; 
     }
 
+    #banner{
+        height: 8%;
+    }
 
     html, body {
-        height: 100% !important;
+        height: 120% !important;
     }
 
     .contenedorform{
@@ -238,7 +327,7 @@ body {
     }
 
     .content{
-        height: 73.28%;
+        height: 85%;
     }
     
 }
@@ -248,9 +337,12 @@ body {
         max-width: none !important; 
     }
 
+    #banner{
+        height: 9%;
+    }
 
     html, body {
-        height: 100% !important;
+        height: 120% !important;
     }
 
     .contenedorform{
@@ -258,7 +350,7 @@ body {
     }
 
     .content{
-        height: 71.6%;
+        height: 85%;
     }
     
 }
@@ -269,21 +361,11 @@ body {
     }
 
     #banner{
-        height: 10%;
+        height: 8%;
     }
 
     html, body {
-        height: 100% !important;
-    }
-
-    .minerva{
-        width: 65px;
-        height: 65px;
-    }
-
-    .lns-logo{
-        width: 160px;
-        height: 50px;
+        height: 120% !important;
     }
 
     .contenedorform{
@@ -291,16 +373,38 @@ body {
     }
     
     .content{
-        height: 73.6%;
+        height: 85%;
+    }
+
+    #botones_desp{
+        width:150px !important;
     }
 
 }
 
-@media (max-width: 210px){
-    .lns-logo{
-        width : 160px;
-        height: 50px;
+@media (max-width: 350px){
+    html, body {
+        height: 125% !important;
     }
+
+    .minerva{
+        display: none !important;
+    }
+
+    .lns-logo{
+        width : 180px !important;
+        height: 60px !important;
+    }
+
+    .contenedorform{
+        height: 100% !important;
+    }
+
+    #botones_desp{
+        font-size: 12px;
+        width:70px !important;
+    }
+
 }
 
 @media (max-width: 170px) {
@@ -309,18 +413,25 @@ body {
     }
 
     html, body {
-        height: 130% !important;
+        height: 125% !important;
     }
+
     .lns-logo{
-        width : 150px;
-        height: 40px;
+        width : 150px !important;
+        height: 40px !important;
     }
 
     #banner{
-        height: 7%;
-    }
+        height: 5%;
+    } 
 
+    #botones_desp{
+        font-size: 8px;
+        margin:0px !important;
+        width:54px !important;
+    }
     .contenedorform{
         margin-bottom: 10px;
+        height: 104% !important;
     }
 }
