--- a/inspecciones/Verificacion_sistemas/estilos.css
+++ b/inspecciones/Verificacion_sistemas/estilos.css
@@ -10,7 +10,7 @@ body {
     flex: 1 0 auto;
     z-index: 3;
     width  : 100%;
-    height : 121% !important ;
+    height : 110% !important ;
 }
 
 footer{
@@ -25,8 +25,16 @@ footer{
 
     
         /*ESTILOS DEL CONTENEDOR DE TODOS LOS FORMULARIOS*/
-.container{
+.container1{
     background-color: aqua;
+    position: static;
+    height: 80%;
+    width: 50%;
+    text-align: center;
+} 
+
+.container2{
+    background-color: rgb(81, 255, 174);
     position: static;
     height: 80%;
     width: 50%;
@@ -150,6 +158,7 @@ footer{
     max-width: none !important; 
     }
 
+    
     footer{
         height: 10%;
     }
@@ -165,6 +174,7 @@ footer{
      
 }
 
+/*PARA AJUSTAR A PANTALLAS MENORES A 1350PX*/
 @media (max-width: 1650px) {
 
     .lns-logo{
@@ -179,7 +189,7 @@ footer{
 
 
     .content{
-        height: 70%;
+        height: 170% !important;
     }
 
     #botones_desp{
