--- a/mantenimientos/Entrada_calendario/estilos.css
+++ b/mantenimientos/Entrada_calendario/estilos.css
@@ -12,7 +12,7 @@
 /*ESTILOS DEL BANNER PRINCPAL*/
 #banner {
     background-color: rgb(0, 59, 92);
-    height          : 12%;
+    height          : 15%;
     width           : 100%;
     position        : static;
     box-shadow      : 5px 5px 20px rgba(53, 71, 82, 0.381);
@@ -23,7 +23,7 @@
 .banner2{
     display         : flex;
     max-width       : 100%;
-    height          : 6%;
+    height          : 8%;
     background-color: #616161 !important;
     justify-content : right;
     align-items     : center;
@@ -116,6 +116,9 @@ body {
     font            : 14px Karla, Sans-Serif;
 }
 
+
+
+
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
 @media (max-width: 1709px) {
 
@@ -128,9 +131,12 @@ body {
     max-width: none !important; 
     }
 
+    .content{
+        height: 64.8%;
+    }
 
     html, body {
-        height: 100% !important;
+        height: 120% !important;
     }
 
     /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO
@@ -153,6 +159,71 @@ body {
         grid-template-rows   : 50% 50%;
     }
 }
+
+
+
+@media (max-width: 1350px) {
+
+    /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO*/
+
+    .content{
+        height: 90%;
+    }
+
+    body{
+        height: 120% !important;
+    }
+
+
+    td{
+        position      : static;
+        height        : 65px;
+        vertical-align: middle;
+    }
+    
+    th{
+        position      : static;
+        height        : 65px;
+        vertical-align: middle;
+    }
+
+  
+    /*****************************************************/
+
+    #banner{
+        height: 40% !important;
+    }
+
+    .contenedorform{
+        width                : 99.5%;
+        height               : 25%;
+        display              : grid;
+        margin-left          : 5px;
+        margin-right         : 5px;
+        grid-template-columns: 98%;
+        grid-template-rows   : 50% 50%;
+        margin-bottom        : 10px;
+    }
+
+    .formuno{
+        font-size       : 11.45px;
+        width           : 99%;
+        height          : 20%;
+        display         : table;
+        text-align      : center;
+
+    }
+    
+    .formdos{
+        font-size       : 12.45px;
+        width           : 99%;
+        height          : 20%;
+        display         : table;
+        text-align      : center;
+      
+    }
+}
+
 
 @media (min-width: 1155px) {
     /*MODIFICACIONES DE LAS TABLAS PARA QUE SE AJUSTEN A CAMBIOS DE TAMAÑO
@@ -177,7 +248,6 @@ body {
 
     /******************************************************/
 }
-
 
 @media (max-width: 1155px) {
 
