--- a/inspecciones/Verificacion_sistemas/estilos.css
+++ b/inspecciones/Verificacion_sistemas/estilos.css
@@ -10,7 +10,7 @@ body {
     flex: 1 0 auto;
     z-index: 3;
     width  : 100%;
-    height : 110% !important ;
+    height : 121% !important ;
 }
 
 footer{
@@ -25,7 +25,7 @@ footer{
 
     
         /*ESTILOS DEL CONTENEDOR DE TODOS LOS FORMULARIOS*/
-.container1{
+.container{
     background-color: aqua;
     position: static;
     height: 80%;
@@ -33,21 +33,144 @@ footer{
     text-align: center;
 } 
 
-.container2{
-    background-color: rgb(81, 255, 174);
-    position: static;
-    height: 80%;
-    width: 50%;
-    text-align: center;
-} 
-
 .contenedor-principal{
+    position: absolute;
     background-color: aquamarine;
     width: 80% !important;
     height: 75% !important;
+    left: 10%;
     border-radius: 20px;
 }
 
+
+/*ESTO ES PARA QUE SE DIVIDA EN DOS EL FORMULARIO*/
+.contenedorPrincipal{
+    background-color: rgb(0, 59, 92);
+    display: grid !important;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
+    text-align: center;
+}
+
+/*SE PONEN TODOS LOS FORMS EN NONE PARA QUE DESPUES PUEDA CAMBIAR
+CON UNA FUNCION DE JS*/
+
+        /*PERTENECE AL PRIMER FORMULARIO*/
+#form1{
+    display: block;
+}
+
+#form11{
+    display: block;
+}
+
+        /*PERTENECE AL SEGUNDO FORMULARIO*/
+#form2{
+    display: none;
+}
+
+#form22{
+    display: none;
+}
+
+        /*PERTENECE AL TERCER FORMULARIO*/
+#form3{
+    display: none;
+}
+
+#form33{
+    display: none;
+}
+
+
+        /*PERTENECE AL CUARTO FORMULARIO*/
+#form4{
+    display: none;
+}
+
+#form44{
+    display: none;
+}
+
+        /*PERTENECE AL QUINTO FORMULARIO*/
+
+#form5{
+    display: none;
+    text-align: center;
+}
+
+#form55{
+    display: none;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+}
+
+#hidra_mano_observaciones {
+    width: 50%;
+    margin: auto;
+}
+
+        /*PERTENECE AL SEXTO FORMULARIO*/
+#form6{
+    display: none;
+    text-align: center;
+}
+#form66{
+    display: none;
+    text-align: center;
+    width: 100%;
+}
+
+#incendia_observaciones{
+    width: 50%;
+    margin: auto;
+}
+
+        /*PERTENECE AL SEPTIMO FORMULARIO*/
+#form7{
+    display: none;
+}
+#form77{
+    text-align: center;
+    display: none;
+}
+
+#ups_observaciones{
+    width:50%;
+    margin: auto;
+}
+
+        /*PERTENECE AL OCTAVO FORMULARIO*/
+#form8{
+    display: none;
+}
+
+#form88{
+    text-align: center;
+    width: 100%;
+    display: none;
+}
+
+#electrogeno_observaciones{
+    width: 50%;
+    height: 20%;
+    margin: auto;
+}
+
+
+/*--------------------------------------------------------------*/
+
+
+/*ESTILOS PERTENECIENTES A LA PRIMERA PARTE DEL FORMULARIO*/
+.contenedor1{
+    background-color: bisque;
+
+}
+
+.contenedor2{
+    background-color: violet;
+}
 
 .contenedor-observaciones{
     width: 100% !important;
@@ -63,9 +186,10 @@ footer{
     margin: 8px;
 }
 
-/* #datos_inspeccion{
-    background-color: antiquewhite;
-} */
+#datos_inspeccion{
+    background-color: rgb(173, 171, 167);
+    border-radius: 15px;
+}
 
 /*-----------------------------------------------*/
 
@@ -121,18 +245,12 @@ footer{
 .minerva{
     width   : 80px;
     height  : 80px;
-    position:absolute;
-    right   : 1%;
-    top     : 3%;
 }
 
 /*ESTILOS DEL LOGO DEL LNS*/
 .lns-logo{
     width   : 170px;
     height  : 60px;
-    position:absolute;
-    left    : 1%;
-    top     : 3.5%;
 }
 
 /*ESTILOS DE BOTONES DEL MENU, EN COLOR AZUL*/
@@ -147,6 +265,8 @@ footer{
 
 /*Evadiendo estilos de Bootstrap sobrepuestos*/
 
+
+
 @media (min-width: 1650px) {
 
     #lns-logo{
@@ -158,7 +278,6 @@ footer{
     max-width: none !important; 
     }
 
-    
     footer{
         height: 10%;
     }
@@ -174,7 +293,6 @@ footer{
      
 }
 
-/*PARA AJUSTAR A PANTALLAS MENORES A 1350PX*/
 @media (max-width: 1650px) {
 
     .lns-logo{
@@ -189,7 +307,7 @@ footer{
 
 
     .content{
-        height: 170% !important;
+        height: 70%;
     }
 
     #botones_desp{
@@ -268,9 +386,16 @@ footer{
         height: 110% !important;
     }
 
-    .cerrar-sesion {
-        width: 130px;
-        height: 40px;
+    .content{
+        height: 100% !important;
+    }
+
+    .contenedorPrincipal{
+        background-color: rgb(0, 59, 92);
+        display: grid !important;
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 50%;
+        text-align: center;
     }
 
     footer{
@@ -279,7 +404,35 @@ footer{
     
 }
 
-@media (max-width: 470px) {
+@media (max-width: 669px) {
+    .container, .container-sm {
+    max-width: none !important; 
+    }
+
+
+    html, body {
+        height: 115% !important;
+    }
+
+    .content{
+        height: 100% !important;
+    }
+
+    .contenedorPrincipal{
+        background-color: rgb(0, 59, 92);
+        display: grid !important;
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 50%;
+        text-align: center;
+    }
+
+    footer{
+        height: 10%;
+    }
+    
+}
+
+@media (max-width: 471px) {
     .container, .container-sm {
     max-width: none !important; 
     }
@@ -303,13 +456,29 @@ footer{
     }
 
     html, body {
-        height: 100% !important;
+        height: 120% !important;
     }
 
-    .cerrar-sesion {
-        width: 130px;
-        height: 40px;
+    .content{
+        height: 150% !important;
     }
+
+    #form88{
+        text-align: center;
+        height: 130%;
+        width: 100%;
+        display: none;
+    }
+
+    .contenedorPrincipal{
+        background-color: rgb(0, 59, 92);
+        display: grid !important;
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 50%;
+        text-align: center;
+    }
+
+    
 
     footer{
         height: 7.5%;
@@ -322,10 +491,15 @@ footer{
         height: 120% !important;
     }
 
+    .minerva{
+        display: none !important;
+    }
+
     footer{
         height: 7.5%;
     }
 }
+
 
 @media (max-width: 260px){
     .minerva{
@@ -336,18 +510,26 @@ footer{
         height: 10%;
     }
 
-    html, body {
-        height: 120% !important;
-    }
-}
-
-@media (max-width: 192px){
-    footer{
-        height: 10%;
+    .content{
+        height: 110%;
     }
 
     html, body {
         height: 125% !important;
+    }
+}
+
+@media (max-width: 201px){
+    footer{
+        height: 10%;
+    }
+
+    .content{
+        height: 115%;
+    }
+
+    html, body {
+        height: 130% !important;
     }   
 }
 
@@ -371,8 +553,12 @@ footer{
         height: 15%;
     }
     
+    .content{
+        height: 135%;
+    }
+    
     html, body {
-        height: 118% !important;
+        height: 145% !important;
     }
     
 }
